RESOLVED FIXED107554
Regression(r140414): It is causing crashes with gstreamer 0.10
https://bugs.webkit.org/show_bug.cgi?id=107554
Summary Regression(r140414): It is causing crashes with gstreamer 0.10
Chris Dumez
Reported 2013-01-22 06:21:47 PST
After <http://trac.webkit.org/changeset/140414>, media tests started crashing on Qt port that is still using gstreamer 0.10.
Attachments
Patch (1.81 KB, patch)
2013-01-22 06:29 PST, Chris Dumez
no flags
Chris Dumez
Comment 2 2013-01-22 06:29:45 PST
Created attachment 183981 [details] Patch The patch was confirmed to fix crashes on Qt port by dicska on IRC.
Philippe Normand
Comment 3 2013-01-22 06:36:03 PST
Comment on attachment 183981 [details] Patch Thanks!
WebKit Review Bot
Comment 4 2013-01-22 06:54:56 PST
Comment on attachment 183981 [details] Patch Clearing flags on attachment: 183981 Committed r140422: <http://trac.webkit.org/changeset/140422>
WebKit Review Bot
Comment 5 2013-01-22 06:55:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.