Regression(r140414): It is causing crashes with gstreamer 0.10 https://bugs.webkit.org/show_bug.cgi?id=107554

Reviewed by Philippe Normand.

gstreamer 0.10 doc led me to believe that gst_element_factory_make()
was not returning a floating reference. However, based on testing
(and results on Qt port) it does so we should NOT adopt the
returned GstElement object.

No new tests, already covered by existing tests.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:


Canonical link: https://commits.webkit.org/125771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140422 268f45cc-cd09-0410-ab3c-d52691b4dbfc